--- a/My Project/Resources.resx
+++ b/My Project/Resources.resx
@@ -121,6 +121,9 @@
   <data name="ic_alarm_add_black_24dp" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\src\image\ic_alarm_add_black_24dp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ic_autorenew_black_24dp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\src\image\ic_autorenew_black_24dp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ic_done_black_24dp" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\src\image\ic_done_black_24dp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
