--- a/My Project/Resources.resx
+++ b/My Project/Resources.resx
@@ -139,4 +139,7 @@
   <data name="ic_warning_black_24dp" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\src\image\ic_warning_black_24dp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="psva" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\src\image\psva.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
